# nrf52832-play

./: Cargo.toml  Embed.toml  LICENSE  Readme.md
.cargo/: config
src/: main.rs
